--- a/Appsisteme/Base.lproj/Main.storyboard
+++ b/Appsisteme/Base.lproj/Main.storyboard
@@ -130,7 +130,6 @@
                                 </state>
                                 <connections>
                                     <action selector="save:" destination="acy-b6-RNE" eventType="touchUpInside" id="1w7-0v-U4x"/>
-                                    <segue destination="B64-Bu-ZEA" kind="show" id="2ik-22-4fh"/>
                                 </connections>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="E-mail de la otra persona" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1oO-8y-u5t">
@@ -160,16 +159,17 @@
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
                         <outlet property="email" destination="1oO-8y-u5t" id="gj6-pK-Ifa"/>
+                        <segue destination="B64-Bu-ZEA" kind="show" identifier="segueToWait" id="wRM-zC-PYs"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="F4V-Bd-lnr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="727" y="289"/>
         </scene>
-        <!--View Controller-->
+        <!--Wait View Controller-->
         <scene sceneID="mun-zX-wT1">
             <objects>
-                <viewController id="B64-Bu-ZEA" customClass="ViewController" sceneMemberID="viewController">
+                <viewController id="B64-Bu-ZEA" customClass="WaitViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Jlv-g2-bEO"/>
                         <viewControllerLayoutGuide type="bottom" id="Ajj-6t-kvM"/>
@@ -184,16 +184,6 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gSJ-EP-B7K">
-                                <rect key="frame" x="121" y="518" width="78" height="30"/>
-                                <color key="backgroundColor" red="0.59937667939999995" green="0.29577203800000001" blue="0.26210814560000001" alpha="1" colorSpace="calibratedRGB"/>
-                                <state key="normal" title="Siguiente">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <segue destination="cqL-OL-IVS" kind="presentation" id="9cP-i2-XOC"/>
-                                </connections>
-                            </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icono_no_persona_asociada" translatesAutoresizingMaskIntoConstraints="NO" id="D7M-e4-kWX">
                                 <rect key="frame" x="135" y="191" width="50" height="50"/>
                                 <constraints>
@@ -229,6 +219,9 @@
                         </constraints>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <connections>
+                        <segue destination="cqL-OL-IVS" kind="presentation" identifier="segueTabBarGuardian" id="qtn-dq-p86"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="k0E-4N-ySa" sceneMemberID="firstResponder"/>
             </objects>
@@ -880,10 +873,10 @@
             </objects>
             <point key="canvasLocation" x="1218" y="623"/>
         </scene>
-        <!--View Controller-->
+        <!--Wait View Controller-->
         <scene sceneID="KYH-rU-qen">
             <objects>
-                <viewController id="vtW-2Y-Jd7" customClass="ViewController" sceneMemberID="viewController">
+                <viewController id="vtW-2Y-Jd7" customClass="WaitViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="zaS-wi-Usf"/>
                         <viewControllerLayoutGuide type="bottom" id="poS-DW-zmB"/>
@@ -892,16 +885,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XUA-uR-g41">
-                                <rect key="frame" x="121" y="518" width="78" height="30"/>
-                                <color key="backgroundColor" red="0.59937667939999995" green="0.29577203800000001" blue="0.26210814560000001" alpha="1" colorSpace="calibratedRGB"/>
-                                <state key="normal" title="Siguiente">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <segue destination="sJh-0p-PqB" kind="presentation" id="Jr7-9D-wgG"/>
-                                </connections>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tu cuenta no tenía a nadie asociado." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KMC-Qe-pce">
                                 <rect key="frame" x="51" y="262" width="219" height="15"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
@@ -947,10 +930,13 @@
                         </constraints>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <connections>
+                        <segue destination="sJh-0p-PqB" kind="presentation" identifier="segueTabBarGuarded" id="TSk-Fd-u1X"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5G9-zb-1pl" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="727" y="971"/>
+            <point key="canvasLocation" x="727" y="1663"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="98K-cO-FTU">
